[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
description = "A key-value store"
authors = ["Ruben Garcia <rubengglez@gmail.com>"]

# To avoid running test in lib.rs
[lib]
test = false
doctest = false

# To avoid running test and doctest in bin/kvs.rs
[[bin]]
name = "kvs"
test = false
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"