[package]
name = "kvs"
version = "0.1.1"
edition = "2021"
description = "A key-value store"
authors = ["Ruben Garcia <rubengglez@gmail.com>"]

# To avoid running test in lib.rs
[lib]
test = false
doctest = false

# To avoid running test and doctest in bin/kvs.rs
[[bin]]
name = "kvs"
test = false
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }


[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
